--- a/Spark-Fundamentals/Spark_Fundamentals_1_-_PythonRDD.ipynb
+++ b/Spark-Fundamentals/Spark_Fundamentals_1_-_PythonRDD.ipynb
@@ -14,7 +14,7 @@
     "- [Data Analysis using R](https://bigdatauniversity.com/bdu-wp/bdu-course/introduction-to-data-analysis-using-r/)  \n",
     "- [Big Data Fundamentals](http://bigdatauniversity.com/bdu-wp/bdu-course/big-data-fundamentals/)  \n",
     "\n",
-    "<img src = \"http://spark.apache.org/images/spark-logo.png\", height = 100, align = 'left'>\n",
+    "<img src = \"https://spark.apache.org/images/spark-logo.png\", height = 100, align = 'left'>\n",
     "<img src = \"https://upload.wikimedia.org/wikipedia/commons/f/f8/Python_logo_and_wordmark.svg\", height = 95, align = 'left'>\n"
    ]
   },
@@ -898,20 +898,12 @@
     "\n",
     "print pair[1]"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The next lab will show you how to create Spark applications using SQL, Graphx, Mlib, etc. The lab is only available in Scala. \n",
-    "\n",
-    "<h1 align=\"center\" style=\"font-family: Monaco;\">Continue on \"[Spark Fundamentals 1 - ScalaLibs.ipynb](/api/v1/resources/Spark%20Fundamentals%201%20-%20ScalaLibs.ipynb)\"</h1>\n"
-   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -926,10 +918,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
   }
  },
  "nbformat": 4,
