rdd creation notebook

--- a/Spark-Fundamentals/Intro-to-Spark.ipynb
+++ b/Spark-Fundamentals/Intro-to-Spark.ipynb
@@ -7,11 +7,7 @@
     "<h1 align = \"center\"> Spark Fundamentals 1 - Introduction to Spark</h1>\n",
     "<h2 align = \"center\"> Getting Started</h2>\n",
     "<h4 align = \"center\"> April 11, 2017 </h4>\n",
-    "<br align = \"left\">\n",
-    "\n",
-    "<img src = \"http://spark.apache.org/images/spark-logo.png\", height = 100, align = 'left'>\n",
-    "<img src = \"https://upload.wikimedia.org/wikipedia/commons/f/f8/Python_logo_and_wordmark.svg\", height = 95, align = 'left'>\n",
-    "<img src = \"https://upload.wikimedia.org/wikipedia/en/8/85/Scala_logo.png\", height = 85, align = 'left'>"
+    "<br align = \"left\">"
    ]
   },
   {
