--- a/pyspark-notebooks/01-rdd-creation.ipynb
+++ b/pyspark-notebooks/01-rdd-creation.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RDD creation\n",
+    "01-RDD creation\n",
     "================\n",
     "\n",
     "## 1. Getting the data files"
@@ -189,6 +189,381 @@
    ],
    "source": [
     "data.take(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "02-RDD Basics\n",
+    "============\n",
+    "\n",
+    "## 1. The ```filter``` transformation\n",
+    "\n",
+    "This transformation can be applied to RDDs in order to keep just elements that satisfy a certain condition. More concretely, a function is evaluated on every element in the original RDD. The new resulting RDD will contain just those elements that make the function return True.\n",
+    "\n",
+    "For example, imagine we want to count how many normal. interactions we have in our dataset. We can filter our raw_data RDD as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "normal_raw_data = raw_data.filter(lambda x: 'normal.' in x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can count how many elements we have in the new RDD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 97278 'normal' interactions\n",
+      "Count completed in 1.785 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "t0 = time()\n",
+    "normal_count = normal_raw_data.count()\n",
+    "tt = time() - t0\n",
+    "print \"There are {} 'normal' interactions\".format(normal_count)\n",
+    "print \"Count completed in {} seconds\".format(round(tt,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have a total of 494021 in our 10 percent dataset. Here we can see that 97278 contain the normal. tag word.\n",
+    "\n",
+    "We have measured the elapsed time for counting the elements in the RDD. We have done this because we wanted to point out that actual (distributed) computations in Spark take place when we execute actions and not transformations. In this case count is the action we execute on the RDD. We can apply as many transformations as we want on a our RDD and no computation will take place until we call the first action that, in this case takes a few seconds to complete.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. The ```map``` transformation\n",
+    "\n",
+    "By using the map transformation in Spark, we can apply a function to every element in our RDD. Python's lambdas are specially expressive for this particular.\n",
+    "\n",
+    "In this case we want to read our data file as a CSV formatted one. We can do this by applying a lambda function to each element in the RDD as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parse completed in 0.067 seconds\n",
+      "[u'0',\n",
+      " u'tcp',\n",
+      " u'http',\n",
+      " u'SF',\n",
+      " u'181',\n",
+      " u'5450',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'1',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'0',\n",
+      " u'8',\n",
+      " u'8',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'1.00',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'9',\n",
+      " u'9',\n",
+      " u'1.00',\n",
+      " u'0.00',\n",
+      " u'0.11',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'0.00',\n",
+      " u'normal.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "csv_data = raw_data.map(lambda x: x.split(\",\"))\n",
+    "t0 = time()\n",
+    "head_rows = csv_data.take(5)\n",
+    "tt = time() - t0\n",
+    "print \"Parse completed in {} seconds\".format(round(tt,3))\n",
+    "pprint(head_rows[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, all action happens once we call the first Spark action (i.e. take in this case). What if we take a lot of elements instead of just the first few?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parse completed in 3.615 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time()\n",
+    "head_rows = csv_data.take(100000)\n",
+    "tt = time() - t0\n",
+    "print \"Parse completed in {} seconds\".format(round(tt,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "We can see that it takes longer. The map function is applied now in a distributed way to a lot of elements on the RDD, hence the longer execution time.\n",
+    "\n",
+    "## 3. Using ```map``` and predefined functions\n",
+    "\n",
+    "Of course we can use predefined functions with map. Imagine we want to have each element in the RDD as a key-value pair where the key is the tag (e.g. normal) and the value is the whole list of elements that represents the row in the CSV formatted file. We could proceed as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def parse_interaction(line):\n",
+    "    elems = line.split(\",\")\n",
+    "    tag = elems[41]\n",
+    "    return(tag, elems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(u'normal.',\n",
+      " [u'0',\n",
+      "  u'tcp',\n",
+      "  u'http',\n",
+      "  u'SF',\n",
+      "  u'181',\n",
+      "  u'5450',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'1',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'0',\n",
+      "  u'8',\n",
+      "  u'8',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'1.00',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'9',\n",
+      "  u'9',\n",
+      "  u'1.00',\n",
+      "  u'0.00',\n",
+      "  u'0.11',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'0.00',\n",
+      "  u'normal.'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "key_csv_data = raw_data.map(parse_interaction)\n",
+    "head_rows = key_csv_data.take(5)\n",
+    "pprint(head_rows[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Working with key-value pairs we will use this type of RDDs to do data aggregations (e.g. count by key).\n",
+    "\n",
+    "## 4. The ```collection``` action\n",
+    "So far we have used the actions ```count and take```. Another basic action is ```collect```. \n",
+    "\n",
+    "Basically it will get all the elements in the RDD into memory for us to work with them. For this reason it has to be used with care, specially when working with large RDDs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data collected in 10.175 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time()\n",
+    "all_raw_data = raw_data.collect()\n",
+    "tt = time() - t0\n",
+    "print \"Data collected in {} seconds\".format(round(tt,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That took longer as any other action we used before, of course. Every Spark worker node that has a fragment of the RDD has to be coordinated in order to retrieve its part, and then reduce everything together.\n",
+    "\n",
+    "### Complete Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# get data from file\n",
+    "data_file = \"./kddcup.data_10_percent.gz\"\n",
+    "raw_data = sc.textFile(data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# parse into key-value pairs\n",
+    "key_csv_data = raw_data.map(parse_interaction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Filter normal key interactions\n",
+    "normal_key_interactions = key_csv_data.filter(lambda x: x[0] == \"normal.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data collected in 6.052 seconds\n",
+      "There are 97278 'normal' interactions\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Collect all \n",
+    "t0 = time()\n",
+    "all_normal =normal_key_interactions.collect()\n",
+    "tt = time() - t0\n",
+    "normal_count = len(all_normal)\n",
+    "print \"Data collected in {} seconds\".format(round(tt,3))\n",
+    "print \"There are {} 'normal' interactions\".format(normal_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This count matches with the previous count for ```normal``` interactions. The new procedure is more time consuming. This is because we retrieve all the data with ```collect``` and then use Python's ```len``` on the resulting list. Before we were just counting the total number of elements in the RDD by using ```count```."
    ]
   }
  ],
