Sampling transformation and action

--- a/pyspark-notebooks/02-rdd-sampling.ipynb
+++ b/pyspark-notebooks/02-rdd-sampling.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -84,8 +84,8 @@
    "source": [
     "raw_data_sample = raw_data.sample(False, 0.1, 1234)\n",
     "sample_size = raw_data_sample.count()\n",
-    "total_zie = raw_data.count()\n",
-    "print \"Sample size is {} of {}\".format(sample_size, total_zie)\n",
+    "total_size = raw_data.count()\n",
+    "print \"Sample size is {} of {}\".format(sample_size, total_size)\n",
     "                                  "
    ]
   },
@@ -112,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "The ratio of 'normal' interactions is 0.199\n",
-      "Count done in 21.444 seconds\n"
+      "Count done in 21.005 seconds\n"
      ]
     }
    ],
@@ -131,6 +131,95 @@
     "sample_normal_ratio = sample_normal_tags_count / float(sample_size)\n",
     "print \"The ratio of 'normal' interactions is {}\".format(round(sample_normal_ratio,3)) \n",
     "print \"Count done in {} seconds\".format(round(tt,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's compare this with calculating the ratio without sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ratio of 'normal' interactions is 0.199\n",
+      "Count done in 58.844 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Transformations to be applied\n",
+    "raw_data_items = raw_data.map(lambda x: x.split(\",\"))\n",
+    "normal_tags = raw_data_items.filter(lambda x: \"normal.\" in x)\n",
+    "\n",
+    "# actions + time \n",
+    "t0 = time()\n",
+    "normal_tags_count = normal_tags.count()\n",
+    "tt = time() - t0\n",
+    "\n",
+    "normal_ratio = normal_tags_count / float(total_size)\n",
+    "print \"The ratio of 'normal' interactions is {}\".format(round(normal_ratio,3)) \n",
+    "print \"Count done in {} seconds\".format(round(tt,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see a gain in time. The more transformations we apply after the sampling the bigger this gain. This is because without sampling all the transformations are applied to complete set of data.\n",
+    "\n",
+    "### The ```takeSample``` action\n",
+    "If what we need is to grab a sample of raw data from our RDD into local memory in order to be used by other non-Spark libraries, ```takeSample``` can be used.\n",
+    "\n",
+    "The syntax is very similar, but in case we specify the number of items instead of the sample size as a fraction of the complete data size.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ratio of 'normal' interactions is 0.1988025\n",
+      "Count done in 33.23 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time()\n",
+    "raw_data_sample = raw_data.takeSample(False, 400000, 1234)\n",
+    "normal_data_sample = [x.split(\",\") for x in raw_data_sample if \"normal.\" in x]\n",
+    "tt = time() - t0\n",
+    "\n",
+    "normal_sample_size = len(normal_data_sample)\n",
+    "\n",
+    "normal_ratio = normal_sample_size / 400000.0\n",
+    "print \"The ratio of 'normal' interactions is {}\".format(normal_ratio)\n",
+    "print \"Count done in {} seconds\".format(round(tt,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The process was very similar as before. We obtained a sample of about 10 percent of the data, and then filter and split.\n",
+    "\n",
+    "\n",
+    "However, it took longer, even with a slightly smaller sample. The reason is that Spark just distributed the execution of the sampling process. The filtering and splitting of the results were done locally in a single node."
    ]
   }
  ],
